# sensor-insights

./: .gitignore  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: backend-pull-request.yml  deploy-dev.yml
backend/: .test.env  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
backend/.deployment/: Dockerfile  requirements.txt  start.sh
backend/.deployment/proxy/conf.d/: default.conf
backend/.ebextensions/: 00_options.config  10_migrate.config
backend/.elasticbeanstalk/: config.yml
backend/apps/commons/: permissions.py
backend/apps/sensors/: admin.py  forms.py  models.py  routers.py  schemas.py  serializers.py  services.py  tests.py  views.py
backend/apps/sensors/management/commands/: playground.py
backend/apps/sensors/migrations/: 0001_initial.py
backend/apps/sensors/serializers/: sensor_aggregated.py  sensor_processed.py
backend/apps/sensors/services/: sensor_csv.py  sensor_process.py
backend/apps/sensors/templates/: csv_import.html  sensor_change_list.html
backend/apps/sensors/tests/: test_csv_import.py  test_sensor_data.py  test_sensor_process.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py  production.py  test.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  config.ts  main.ts  translates.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/shared/: index.ts
frontend/src/shared/components/: CoreNavbar.vue  DartModeSwitch.vue  LanguageSwitch.vue
frontend/src/shared/composables/: useDarkMode.ts
frontend/src/shared/services/: BaseApi.ts  BaseApiService.ts
tools/: mock_ingest_data.py
(+8 files in other folders)
